# lib-ncclbench

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
cmake/xccl/: FindNCCL.cmake  Hipify.cmake
example/: CMakeLists.txt  libncclbench_example.cpp  ncclbench.cpp  ncclbench_example.cpp
example/include/: Configs.hpp  Options.hpp  Results.hpp
example/yaml/: cfg.yml
include/ncclbench/: ncclbench.hpp  xccl.hpp
include/ncclbench/benchmarks/: benchmarks.hpp  common.hpp  nccl_template.hpp
include/ncclbench/utils/: checks.hpp  host.hpp  nccl_functions.hpp  output.hpp  types.hpp  utils.hpp
source/: ncclbench.cpp
source/benchmarks/: nccl_allgather.cpp  nccl_allreduce.cpp  nccl_alltoall.cpp  nccl_broadcast.cpp  nccl_p2p.cpp  nccl_reduce.cpp  nccl_reduce_scatter.cpp
test/: CMakeLists.txt
test/source/: ncclbench_test.cpp
